# ErgasiaMegaglotistes

./: CMakeLists.txt  ErgasiaMetaglotistes.cpp  LICENSE  MainWindow.glade  MainWindow.glade~  PHP_basics.php  PHP_basics.txt  README.md  WordCount.l  a.out  docker-compose.yml  ergasia_mtgl.l  index.php  lex.yy.c  run.sh  student_name.txt
Functions/: CRUD.php  Functions.php  footer.php  header.php  includes.php
Tests/: Tests.php
